[gd_scene load_steps=26 format=3 uid="uid://dhan07vwy03tg"]

[ext_resource type="Script" uid="uid://dal34141ic34q" path="res://Scripts/ObjectScripts/DrillManager.gd" id="1_axli8"]
[ext_resource type="Texture2D" uid="uid://csjxt0ath58re" path="res://Assets/Images/Objects/Enemy/DrillSpritesheet.png" id="2_td8xb"]
[ext_resource type="Texture2D" uid="uid://dnrg6n05eyy73" path="res://Assets/Images/Objects/Enemy/DrillBreakSpritesheet.png" id="3_1ri88"]
[ext_resource type="Texture2D" uid="uid://byl4l6qeccksa" path="res://Assets/Images/Objects/Enemy/DrillTurningSpritesheet.png" id="3_yowwe"]
[ext_resource type="AudioStream" uid="uid://my48ww17lxuh" path="res://Assets/Audio/SFX/SwordHit.wav" id="5_xth7s"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0na53"]
atlas = ExtResource("2_td8xb")
region = Rect2(0, 0, 40, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_pxn8e"]
atlas = ExtResource("3_yowwe")
region = Rect2(0, 160, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_kpi8y"]
atlas = ExtResource("3_yowwe")
region = Rect2(0, 120, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlpp4"]
atlas = ExtResource("3_yowwe")
region = Rect2(0, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_t31lp"]
atlas = ExtResource("3_yowwe")
region = Rect2(0, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_450si"]
atlas = ExtResource("3_yowwe")
region = Rect2(0, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_pj7qx"]
atlas = ExtResource("2_td8xb")
region = Rect2(0, 0, 40, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqbdd"]
atlas = ExtResource("2_td8xb")
region = Rect2(0, 40, 40, 35)

[sub_resource type="SpriteFrames" id="SpriteFrames_fmm32"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0na53")
}],
"loop": false,
"name": &"Idle",
"speed": 60.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pxn8e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kpi8y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlpp4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t31lp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_450si")
}],
"loop": false,
"name": &"LeftToRight",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pj7qx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqbdd")
}],
"loop": true,
"name": &"Moving",
"speed": 20.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_0qpvt"]
atlas = ExtResource("3_1ri88")
region = Rect2(0, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_tfp48"]
atlas = ExtResource("3_1ri88")
region = Rect2(40, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_q4eqt"]
atlas = ExtResource("3_1ri88")
region = Rect2(80, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ici5m"]
atlas = ExtResource("3_1ri88")
region = Rect2(0, 60, 30, 20)

[sub_resource type="SpriteFrames" id="SpriteFrames_dh7n3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0qpvt")
}],
"loop": true,
"name": &"Break1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tfp48")
}],
"loop": true,
"name": &"Break2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q4eqt")
}],
"loop": true,
"name": &"Break3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ici5m")
}],
"loop": true,
"name": &"None",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6fc6h"]
size = Vector2(24, 15.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bxb5c"]
size = Vector2(8, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dncpn"]
size = Vector2(8, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3tpe1"]
size = Vector2(24, 15.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_0o1es"]
radius = 364.232

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_jsx41"]
polygon = PackedVector2Array(2, 32, 2, 10, 3, 9, 4, 9, 4, 8, 5, 8, 5, 7, 6, 7, 6, 6, 7, 6, 7, 5, 8, 5, 8, 4, 9, 4, 9, 3, 10, 3, 10, 2, 11, 2, 11, 1, 12, 1, 12, 0, 13, 0, 13, -1, 14, -1, 27, -1, 28, -1, 28, 0, 29, 0, 29, 1, 30, 1, 30, 2, 31, 2, 31, 3, 32, 3, 32, 4, 33, 4, 33, 5, 34, 5, 34, 6, 35, 6, 35, 7, 36, 7, 38, 10, 38, 32)

[node name="DrillManager" type="Node2D"]
z_index = 1
script = ExtResource("1_axli8")

[node name="ExtRaycastDownRight" type="RayCast2D" parent="."]
position = Vector2(46, 11)
target_position = Vector2(0, 31)

[node name="ExtRaycastDownLeft" type="RayCast2D" parent="."]
position = Vector2(-7, 11)
target_position = Vector2(0, 31)

[node name="DrillAnimation" type="AnimatedSprite2D" parent="."]
position = Vector2(20, 14.5)
sprite_frames = SubResource("SpriteFrames_fmm32")
animation = &"Moving"
autoplay = "Moving"

[node name="DrillBreakOverlay" type="AnimatedSprite2D" parent="."]
position = Vector2(20, 4)
sprite_frames = SubResource("SpriteFrames_dh7n3")
animation = &"None"

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(16, 16)
target_position = Vector2(-20, 0)

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(16, 16)
target_position = Vector2(28, 0)

[node name="RayCastDown" type="RayCast2D" parent="."]
position = Vector2(32, 16)
target_position = Vector2(0, 16)

[node name="RayCastDown2" type="RayCast2D" parent="."]
position = Vector2(6, 16)
target_position = Vector2(0, 16)

[node name="JumpHurtBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="JumpHurtBox"]
position = Vector2(22, -8.25)
shape = SubResource("RectangleShape2D_6fc6h")
disabled = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="JumpHurtBox"]
position = Vector2(40, 16)
shape = SubResource("RectangleShape2D_bxb5c")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="JumpHurtBox"]
position = Vector2(-4, 16)
shape = SubResource("RectangleShape2D_dncpn")

[node name="JumpHurtBoxAllwaysActive" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="JumpHurtBoxAllwaysActive"]
position = Vector2(22, -8.5)
shape = SubResource("RectangleShape2D_3tpe1")
disabled = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="JumpHurtBoxAllwaysActive"]
position = Vector2(40, 16)
shape = SubResource("RectangleShape2D_bxb5c")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="JumpHurtBoxAllwaysActive"]
position = Vector2(-4, 16)
shape = SubResource("RectangleShape2D_dncpn")

[node name="DrillCollider" type="CharacterBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="DrillCollider"]
polygon = PackedVector2Array(38, 32, 38, 10, 27, -1, 14, -1, 2, 10, 2, 32)

[node name="PlayerInRangeDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerInRangeDetector"]
position = Vector2(19, 15)
shape = SubResource("CircleShape2D_0o1es")
debug_color = Color(0, 0.6, 0.701961, 0)

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_jsx41")

[node name="SwordHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_xth7s")
volume_db = 7.0
pitch_scale = 0.6
bus = &"SFX"

[connection signal="animation_finished" from="DrillAnimation" to="." method="_on_drill_animation_animation_finished"]
[connection signal="area_entered" from="JumpHurtBox" to="." method="_on_jump_hurt_box_area_entered"]
[connection signal="area_entered" from="JumpHurtBoxAllwaysActive" to="." method="_on_jump_hurt_box_allways_active_area_entered"]
[connection signal="area_entered" from="PlayerInRangeDetector" to="." method="_on_player_in_range_detector_area_entered"]
